--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.2",
+    "primereact": "^9.4.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
