--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-persist": "^6.0.0",
     "swiper": "^9.2.2",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.1.1"
   },
   "scripts": {
